Fixed setting of service address

--- a/src/main/resources/elements/service-call/template.hbs
+++ b/src/main/resources/elements/service-call/template.hbs
@@ -60,7 +60,7 @@
             <simple>{{property 'integrationOperationPath'}}</simple>
         </setProperty>
         <setProperty name="serviceCallBrokers">
-            <simple>{{integrationAddress}}</simple>
+            <simple>{{integrationEndpoint}}</simple>
         </setProperty>
 
         <setProperty name="serviceCallParametersJson">
@@ -100,7 +100,7 @@
             <simple>{{property 'integrationOperationPath'}}</simple>
         </setProperty>
         <setProperty name="serviceCallAddress">
-            <simple>{{integrationAddress}}</simple>
+            <simple>{{integrationEndpoint}}</simple>
         </setProperty>
 
         <setProperty name="serviceCallParametersJson">
