--- a/src/main/resources/elements/rabbitmq-trigger-2/template.hbs
+++ b/src/main/resources/elements/rabbitmq-trigger-2/template.hbs
@@ -2,4 +2,8 @@
 <setProperty name="internalProperty_acknowledgeMode">
     <constant>{{property 'acknowledgeMode'}}</constant>
 </setProperty>
-<process id="{{identifier}}" ref="rabbitMqTriggerProcessor"/>
+<step id="{{identifier}}">
+    <process ref="rabbitMqTriggerProcessor"/>
+    {{> idempotency}}
+</step>
+
