--- a/src/main/resources/elements/kafka-trigger-2/template.hbs
+++ b/src/main/resources/elements/kafka-trigger-2/template.hbs
@@ -1,2 +1,5 @@
 <from uri="kafka-custom:{{property 'topics'}}{{escape (query)}}&amp;headerDeserializer=#kafkaHeaderStringDeserializer&amp;kafkaClientFactory=#{{identifier}}-v2"/>
-<process id="{{identifier}}" ref="kafkaTriggerProcessor"/>
+<step id="{{identifier}}">
+    <process ref="kafkaTriggerProcessor"/>
+    {{> idempotency}}
+</step>
