--- a/src/main/resources/elements/pubsub-trigger/template.hbs
+++ b/src/main/resources/elements/pubsub-trigger/template.hbs
@@ -1,2 +1,5 @@
 <from uri="google-pubsub:{{property 'projectId'}}:{{property 'destinationName'}}{{escape (query)}}&amp;serviceAccountKey=base64:{{property 'serviceAccountKey'}}"/>
-<process id="{{identifier}}" ref="pubSubProcessor"/>
+<step id="{{identifier}}">
+    <process ref="pubSubProcessor"/>
+    {{> idempotency}}
+</step>
